All Cycles structure created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,33 @@
     <string name="end_q">END: Q</string>
     <string name="z0">Z0.</string>
     <string name="x0">X0</string>
+    <string name="roughing_cycles">ROUGHING CYCLES</string>
+    <string name="external_roughing_cycle_z_direction_g71">EXTERNAL ROUGHING CYCLE Z- DIRECTION G71</string>
+    <string name="external_roughing_cycle_x_direction_g72">EXTERNAL ROUGHING CYCLE X- DIRECTION G72</string>
+    <string name="external_roughing_cycle_advanced_long_code">EXTERNAL ROUGHING CYCLE ADVANCED LONG CODE</string>
+    <string name="internal_roughing_cycle_z_direction_g71">INTERNAL ROUGHING CYCLE Z- DIRECTION G71</string>
+    <string name="internal_roughing_cycle_x_direction_g72">INTERNAL ROUGHING CYCLE X- DIRECTION G72</string>
+    <string name="internal_roughing_cycle_advanced_long_code">INTERNAL ROUGHING CYCLE ADVANCED LONG CODE</string>
+    <string name="grooving_cycles">GROOVING CYCLES</string>
+    <string name="external_grooving_cycle_x_direction_g75">EXTERNAL GROOVING CYCLE X- DIRECTION G75</string>
+    <string name="external_grooving_cycle_x_direction_advanced">EXTERNAL GROOVING CYCLE X- DIRECTION ADVANCED</string>
+    <string name="internal_grooving_cycle_x_direction_g75">INTERNAL GROOVING CYCLE X- DIRECTION G75</string>
+    <string name="internal_grooving_cycle_x_direction_advanced">INTERNAL GROOVING CYCLE X- DIRECTION ADVANCED</string>
+    <string name="face_grooving_cycle_z_direction_g74">FACE GROOVING CYCLE Z- DIRECTION G74</string>
+    <string name="face_grooving_cycle_z_direction_advanced">FACE GROOVING CYCLE Z- DIRECTION ADVANCED</string>
+    <string name="finishing_cycles">FINISHING CYCLES</string>
+    <string name="external_finishing_cycle_z_direction_long_code">EXTERNAL FINISHING CYCLE Z- DIRECTION LONG CODE</string>
+    <string name="external_finishing_cycle_z_direction_advanced">EXTERNAL FINISHING CYCLE Z- DIRECTION ADVANCED</string>
+    <string name="external_finishing_cycle_x_direction_long_code">EXTERNAL FINISHING CYCLE X- DIRECTION LONG CODE</string>
+    <string name="internal_finishing_cycle_z_direction_long_code">INTERNAL FINISHING CYCLE Z- DIRECTION LONG CODE</string>
+    <string name="internal_finishing_cycle_z_direction_advanced">INTERNAL FINISHING CYCLE Z- DIRECTION ADVANCED</string>
+    <string name="internal_finishing_cycle_x_direction_long_code">INTERNAL FINISHING CYCLE X- DIRECTION LONG CODE</string>
+    <string name="threading_cycles">THREADING CYCLES</string>
+    <string name="external_threading_cycle_basic_g76">EXTERNAL THREADING CYCLE BASIC G76</string>
+    <string name="external_threading_cycle_advanced_g32">EXTERNAL THREADING CYCLE ADVANCED G32</string>
+    <string name="internal_threading_cycle_basic_g76">INTERNAL THREADING CYCLE BASIC G76</string>
+    <string name="internal_threading_cycle_advanced_g32">INTERNAL THREADING CYCLE ADVANCED G32</string>
+    <string name="cutting_cycles">CUTTING CYCLES</string>
+    <string name="external_cutting_cycle_long_code">EXTERNAL CUTTING CYCLE LONG CODE</string>
+    <string name="external_cutting_cycle_advanced">EXTERNAL CUTTING CYCLE ADVANCED</string>
 </resources>
