Complete the logic of external Roughing cycles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,4 +134,47 @@
     <string name="g70">G70</string>
     <string name="_0202">0202</string>
     <string name="ok">OK</string>
+    <string name="r">R:</string>
+    <string name="_0_5">0.5</string>
+    <string name="d">D:</string>
+    <string name="_1_8">1.8</string>
+    <string name="u">U:</string>
+    <string name="_0_3">0.3</string>
+    <string name="_180">180</string>
+    <string name="x20">X20</string>
+    <string name="_2nd">2ND</string>
+    <string name="z_20">Z-20</string>
+    <string name="R">R</string>
+    <string name="_3rd">3RD</string>
+    <string name="_4th">4TH</string>
+    <string name="_5th">5TH</string>
+    <string name="z_22">Z-22</string>
+    <string name="r2">R2</string>
+    <string name="_6th">6TH</string>
+    <string name="g1">G1</string>
+    <string name="x32">X32</string>
+    <string name="x22">X22</string>
+    <string name="z_30">Z-30</string>
+    <string name="x">X</string>
+    <string name="z">Z</string>
+    <string name="_10th">10TH</string>
+    <string name="_9th">9TH</string>
+    <string name="_8th">8TH</string>
+    <string name="_7th">7TH</string>
+    <string name="x36">X36</string>
+    <string name="x50">X50</string>
+    <string name="_2_2">2.2</string>
+    <string name="x30">X30</string>
+    <string name="x34">X34</string>
+    <string name="x38">X38</string>
+    <string name="x40">X40</string>
+    <string name="z_18">Z-18</string>
+    <string name="z_21">Z-21</string>
+    <string name="r1">R1</string>
+    <string name="_2">2</string>
+    <string name="g2">G2</string>
+    <string name="g3">G3</string>
+    <string name="z_15">Z-15</string>
+    <string name="_11th">11TH</string>
+    <string name="z_35">Z-35</string>
 </resources>
