Finishing Cycles works start 60% done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,4 +177,8 @@
     <string name="z_15">Z-15</string>
     <string name="_11th">11TH</string>
     <string name="z_35">Z-35</string>
+    <string name="_0_4">0.4</string>
+    <string name="surface_roughness_setting_ra">SURFACE ROUGHNESS SETTING Ra</string>
+    <string name="_3_2">3.2</string>
+    <string name="_0303">0303</string>
 </resources>
