Add some extra button in Main XML Layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,7 @@
     <string name="cutting">CUTTING</string>
     <string name="program_structure">PROGRAM STRUCTURE</string>
     <string name="_1_start_program">1. Start Program</string>
-    <string name="_2_ext_rough_g71">2. EXT. ROUGH G71</string>
-    <string name="_4_ext_cutting_alc">4. EXT. CUTTING ALC</string>
+    <string name="_2_ext_rough_g71">4. EXT. ROUGH Z G71</string>
     <string name="_5_end_program">5. END PROGRAM</string>
     <string name="start_new_progra">START NEW PROGRAM</string>
     <string name="caution_if_you_start_a_new_program">CAUTION ! IF YOU START A NEW PROGRAM</string>
@@ -184,4 +183,29 @@
     <string name="x60">X60</string>
     <string name="r3">R3</string>
     <string name="r2_5">R2.5</string>
+    <string name="ext_rough_x_g72">5. EXT ROUGH X G72</string>
+    <string name="_4_ext_rough_alc">6. EXT ROUGH ALC</string>
+    <string name="int_rough_z_g71">7. INT ROUGH Z G71</string>
+    <string name="_6_int_rough_x_g71">8. INT ROUGH X G72</string>
+    <string name="_7_int_rough_alc">9. INT ROUGH ALC</string>
+    <string name="_2_facing_cycle_up">2. Facing Cycle Up</string>
+    <string name="_3_facing_cycle_down">3. Facing Cycle Down</string>
+    <string name="_10_ext_finish_z">10, EXT FINISH Z</string>
+    <string name="_11_ext_finish_alc">11. EXT FINISH ALC</string>
+    <string name="_12_ext_finish_x">12. EXT FINISH X</string>
+    <string name="_13_int_finish_z">13. INT FINISH Z</string>
+    <string name="_14_int_finish_alc">14. INT FINISH ALC</string>
+    <string name="_15_int_finish_x">15. INT FINISH X</string>
+    <string name="_16_ext_thread_g76">16. EXT THREAD G76</string>
+    <string name="_17_ext_thread_alc_g32">17. EXT THREAD ALC G32</string>
+    <string name="_18_int_thread_g76">18. INT THREAD G76</string>
+    <string name="_19_int_thread_alc_g32">19. INT THREAD ALC G32</string>
+    <string name="_20_ext_groov_x_g75">20. EXT GROOV X G75</string>
+    <string name="ext_groov_x_alc">21. EXT GROOV X ALC</string>
+    <string name="_22_int_groov_x_g75">22. INT GROOV X G75</string>
+    <string name="_23_int_groov_x_alc">23. INT GROOV X ALC</string>
+    <string name="_24_face_groov_z_g74">24. FACE GROOV Z G74</string>
+    <string name="_25_face_groov_z_alc">25. FACE GROOV Z ALC</string>
+    <string name="_26_ext_cutt_lc">26. EXT CUTT LC</string>
+    <string name="_27_ext_cutt_alc">27. EXT CUTT ALC</string>
 </resources>
